--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
   "homepage": "https://github.com/airplanemodes/mainframe-server#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0"
   },
   "devDependencies": {
