--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
-    "jsonwebtoken": "^8.5.1",
-    "pg": "^8.8.0"
+    "jsonwebtoken": "^9.0.0",
+    "pg": "^8.8.0",
+    "socket.io": "^4.5.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
