system msg off, package.json upd

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "binary"
   ],
   "author": "airplanemodes",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/airplanemodes/mainframe-server/issues"
   },
